make the nar bar z-index 999 to solve the gif overalapping issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6475,6 +6475,7 @@ a.thumbnail image {
           align-items: center;
           position:fixed;
           width:100%;
+          z-index:999;
 }
 
 .title-bar .menu-icon {
